fix: jar needs inputstream to work, properties and dependencies missing, added dockerfiles

--- a/worker/src/main/resources/application.properties
+++ b/worker/src/main/resources/application.properties
@@ -10,6 +10,12 @@ execute-scheduler = true
 batch-size = 300
 
 # google maps config
+service.google.timeout=4
+service.google.limit=100
+service.google.retry=5
+service.google.maps.key=${MAPS_KEY:}
+service.google.maps.options.radius=1000
+
 service.gtfs.url.trip-update=https://gtfsrt.api.translink.com.au/api/realtime/SEQ/TripUpdates
 service.gtfs.scheduler.interval=1
 spring.quartz.job-store-type=memory
