--- a/discovery/src/main/resources/application.properties
+++ b/discovery/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8761
+server.port=${PORT:8761}
 spring.application.name=discovery
 eureka.client.fetch-registry=false
 eureka.client.register-with-eureka=false
