--- a/worker/build.gradle
+++ b/worker/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.0'
     // https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java
     implementation group: 'com.google.protobuf', name: 'protobuf-java', version: '3.21.5'
+    implementation 'com.google.maps:google-maps-services:2.1.0'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
