fix: cors config, option to skip refresh data

--- a/data-initializer/src/main/resources/application.properties
+++ b/data-initializer/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=${PORT:0}
 server.error.include-message=always
 server.error.include-stacktrace=never
 spring.jackson.mapper.accept-case-insensitive-enums = true
-refresh-data.static = true
-refresh-data.places = true
+refresh-data.static = ${REFRESH_DATA:true}
+refresh-data.places = ${REFRESH_DATA:true}
 batch-size = 300
 
 # google maps config
