--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -9,6 +9,9 @@ spring:
           allowedHeaders: "*"
           allowedMethods:
             - GET
+            - POST
+            - PUT
+            - DELETE
     gateway:
       discovery:
         locator:
