--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,7 +51,7 @@ services:
       EUREKA_URL: http://discovery:8761
       MONGO_HOST: mongodb
       MONGO_PORT: 27017
-      REFRESH_DATA: false
+      REFRESH_DATA: true
     networks:
       - app-network
     volumes:
