--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -26,6 +26,11 @@ ext {
     set('springCloudVersion', "2021.0.4")
 }
 
+jar {
+    enabled = false
+}
+
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
